fix: Notebooks fix (#887)
1. Fixed tricky notebook bug by forcefully importing `torch` ahead of all other packages.

---------

Co-authored-by: jarulraj <arulraj@gatech.edu>

--- a/tutorials/05-asl-action-recognition.ipynb
+++ b/tutorials/05-asl-action-recognition.ipynb
@@ -448,6 +448,23 @@
     "\n",
     "annotate_video(response, input_path, output_path)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dropping User-Defined Function (UDF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.drop_udf(\"ASLActionRecognition\").df()"
+   ]
   }
  ],
  "metadata": {
