--- a/tutorials/06-loading-structured-data.ipynb
+++ b/tutorials/06-loading-structured-data.ipynb
@@ -90,13 +90,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-24-2023 10:49:09 WARNING[executor_utils:executor_utils.py:handle_if_not_exists:0083] Table: bddtestmeta already exists\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -349,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "69e378d4-4d30-47cf-84c8-8fe56afe517e",
    "metadata": {
     "execution": {
@@ -359,7 +352,82 @@
      "shell.execute_reply": "2023-06-24T15:53:29.903087Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bddtest_1.id</th>\n",
+       "      <th>yolo.labels</th>\n",
+       "      <th>yolo.bboxes</th>\n",
+       "      <th>yolo.scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[car, car, stop sign, car, person, car, stop s...</td>\n",
+       "      <td>[[488.86077880859375, 332.8629150390625, 716.9...</td>\n",
+       "      <td>[0.93, 0.81, 0.78, 0.65, 0.56, 0.52, 0.49, 0.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[car, car, stop sign, car, stop sign, car, per...</td>\n",
+       "      <td>[[485.6525573730469, 332.111083984375, 716.249...</td>\n",
+       "      <td>[0.92, 0.77, 0.72, 0.67, 0.62, 0.59, 0.46, 0.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[car, stop sign, car, car, car, person, car, c...</td>\n",
+       "      <td>[[481.7060546875, 331.65838623046875, 716.8156...</td>\n",
+       "      <td>[0.94, 0.77, 0.77, 0.77, 0.6, 0.55, 0.42, 0.39...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bddtest_1.id                                        yolo.labels  \\\n",
+       "0             0  [car, car, stop sign, car, person, car, stop s...   \n",
+       "1             1  [car, car, stop sign, car, stop sign, car, per...   \n",
+       "2             2  [car, stop sign, car, car, car, person, car, c...   \n",
+       "\n",
+       "                                         yolo.bboxes  \\\n",
+       "0  [[488.86077880859375, 332.8629150390625, 716.9...   \n",
+       "1  [[485.6525573730469, 332.111083984375, 716.249...   \n",
+       "2  [[481.7060546875, 331.65838623046875, 716.8156...   \n",
+       "\n",
+       "                                         yolo.scores  \n",
+       "0  [0.93, 0.81, 0.78, 0.65, 0.56, 0.52, 0.49, 0.4...  \n",
+       "1  [0.92, 0.77, 0.72, 0.67, 0.62, 0.59, 0.46, 0.4...  \n",
+       "2  [0.94, 0.77, 0.77, 0.77, 0.6, 0.55, 0.42, 0.39...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = cursor.table(\"bddtest_1\")\n",
     "query = query.filter(\"id < 3\")\n",
@@ -379,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2990038a-00ec-4d36-aae2-82a789f2389a",
    "metadata": {
     "execution": {
@@ -489,8 +557,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6797</th>\n",
-       "      <td>11153</td>\n",
+       "      <th>3396</th>\n",
+       "      <td>3397</td>\n",
        "      <td>11581</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -500,8 +568,8 @@
        "      <td>643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6798</th>\n",
-       "      <td>11154</td>\n",
+       "      <th>3397</th>\n",
+       "      <td>3398</td>\n",
        "      <td>11582</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -511,8 +579,8 @@
        "      <td>644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6799</th>\n",
-       "      <td>11155</td>\n",
+       "      <th>3398</th>\n",
+       "      <td>3399</td>\n",
        "      <td>11583</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -522,8 +590,8 @@
        "      <td>642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6800</th>\n",
-       "      <td>11156</td>\n",
+       "      <th>3399</th>\n",
+       "      <td>3400</td>\n",
        "      <td>11584</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -533,8 +601,8 @@
        "      <td>641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6801</th>\n",
-       "      <td>11157</td>\n",
+       "      <th>3400</th>\n",
+       "      <td>3401</td>\n",
        "      <td>11585</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -545,7 +613,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6802 rows × 8 columns</p>\n",
+       "<p>3401 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -556,11 +624,11 @@
        "3                       4            8188                     0   \n",
        "4                       5            8189                     0   \n",
        "...                   ...             ...                   ...   \n",
-       "6797                11153           11581                  1197   \n",
-       "6798                11154           11582                  1197   \n",
-       "6799                11155           11583                  1197   \n",
-       "6800                11156           11584                  1197   \n",
-       "6801                11157           11585                  1197   \n",
+       "3396                 3397           11581                  1197   \n",
+       "3397                 3398           11582                  1197   \n",
+       "3398                 3399           11583                  1197   \n",
+       "3399                 3400           11584                  1197   \n",
+       "3400                 3401           11585                  1197   \n",
        "\n",
        "      bddtestmeta.video_id bddtestmeta.dataset_name bddtestmeta.label  \\\n",
        "0                        4                  bddtest               car   \n",
@@ -569,11 +637,11 @@
        "3                        4                  bddtest               car   \n",
        "4                        4                  bddtest               car   \n",
        "...                    ...                      ...               ...   \n",
-       "6797                     4                  bddtest               car   \n",
-       "6798                     4                  bddtest               car   \n",
-       "6799                     4                  bddtest               car   \n",
-       "6800                     4                  bddtest               car   \n",
-       "6801                     4                  bddtest               car   \n",
+       "3396                     4                  bddtest               car   \n",
+       "3397                     4                  bddtest               car   \n",
+       "3398                     4                  bddtest               car   \n",
+       "3399                     4                  bddtest               car   \n",
+       "3400                     4                  bddtest               car   \n",
        "\n",
        "                                  bddtestmeta.bbox  bddtestmeta.object_id  \n",
        "0         [491.7783, 320.9238, 717.0901, 512.1478]                    512  \n",
@@ -582,13 +650,13 @@
        "3       [811.87067, 325.91223, 948.2217, 408.2217]                    515  \n",
        "4      [673.0254, 325.08084, 751.17786, 367.48267]                    516  \n",
        "...                                            ...                    ...  \n",
-       "6797     [554.96533, 335.88916, 588.2217, 378.291]                    643  \n",
-       "6798     [693.8106, 350.0231, 734.5497, 395.75058]                    644  \n",
-       "6799  [683.83374, 345.03464, 733.71826, 389.93073]                    642  \n",
-       "6800     [676.351, 346.69745, 699.6305, 384.11084]                    641  \n",
-       "6801      [662.2171, 351.6859, 681.3395, 377.4596]                    638  \n",
+       "3396     [554.96533, 335.88916, 588.2217, 378.291]                    643  \n",
+       "3397     [693.8106, 350.0231, 734.5497, 395.75058]                    644  \n",
+       "3398  [683.83374, 345.03464, 733.71826, 389.93073]                    642  \n",
+       "3399     [676.351, 346.69745, 699.6305, 384.11084]                    641  \n",
+       "3400      [662.2171, 351.6859, 681.3395, 377.4596]                    638  \n",
        "\n",
-       "[6802 rows x 8 columns]"
+       "[3401 rows x 8 columns]"
       ]
      },
      "execution_count": 7,
