--- a/tutorials/01-mnist.ipynb
+++ b/tutorials/01-mnist.ipynb
@@ -139,7 +139,7 @@
    ],
    "source": [
     "# Getting MNIST as a video\n",
-    "!wget -nc https://www.dropbox.com/s/yxljxz6zxoqu54v/mnist.mp4\n",
+    "!wget -nc \"https://www.dropbox.com/s/yxljxz6zxoqu54v/mnist.mp4\"\n",
     "\n",
     "# Load the video into EvaDB\n",
     "cursor.query(\"DROP TABLE IF EXISTS MNISTVid\").df()\n",
