--- a/tutorials/06-loading-structured-data.ipynb
+++ b/tutorials/06-loading-structured-data.ipynb
@@ -43,10 +43,10 @@
    "id": "c758b60b-e75e-4128-805d-46a210638daf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:28.884278Z",
-     "iopub.status.busy": "2023-06-17T04:35:28.883704Z",
-     "iopub.status.idle": "2023-06-17T04:35:36.878843Z",
-     "shell.execute_reply": "2023-06-17T04:35:36.877525Z"
+     "iopub.execute_input": "2023-06-24T15:53:15.137115Z",
+     "iopub.status.busy": "2023-06-24T15:53:15.136582Z",
+     "iopub.status.idle": "2023-06-24T15:53:21.970562Z",
+     "shell.execute_reply": "2023-06-24T15:53:21.969608Z"
     }
    },
    "outputs": [
@@ -81,21 +81,14 @@
    "id": "8897b9bb-0993-4eb0-959d-6484a651a90f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:36.883640Z",
-     "iopub.status.busy": "2023-06-17T04:35:36.883349Z",
-     "iopub.status.idle": "2023-06-17T04:35:36.943655Z",
-     "shell.execute_reply": "2023-06-17T04:35:36.942651Z"
+     "iopub.execute_input": "2023-06-24T15:53:21.975671Z",
+     "iopub.status.busy": "2023-06-24T15:53:21.975369Z",
+     "iopub.status.idle": "2023-06-24T15:53:21.999513Z",
+     "shell.execute_reply": "2023-06-24T15:53:21.998867Z"
     },
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-24-2023 10:49:09 WARNING[executor_utils:executor_utils.py:handle_if_not_exists:0083] Table: bddtestmeta already exists\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -167,10 +160,10 @@
    "id": "62def7ce-3f83-4fa0-b9fd-2e553b3919ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:36.947607Z",
-     "iopub.status.busy": "2023-06-17T04:35:36.947363Z",
-     "iopub.status.idle": "2023-06-17T04:35:38.354832Z",
-     "shell.execute_reply": "2023-06-17T04:35:38.352895Z"
+     "iopub.execute_input": "2023-06-24T15:53:22.003147Z",
+     "iopub.status.busy": "2023-06-24T15:53:22.002918Z",
+     "iopub.status.idle": "2023-06-24T15:53:23.351067Z",
+     "shell.execute_reply": "2023-06-24T15:53:23.349280Z"
     }
    },
    "outputs": [
@@ -207,10 +200,10 @@
    "id": "cf8415ac-f9e0-4bee-b2aa-b4e104b10a4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:38.360138Z",
-     "iopub.status.busy": "2023-06-17T04:35:38.359792Z",
-     "iopub.status.idle": "2023-06-17T04:35:39.376690Z",
-     "shell.execute_reply": "2023-06-17T04:35:39.375690Z"
+     "iopub.execute_input": "2023-06-24T15:53:23.356954Z",
+     "iopub.status.busy": "2023-06-24T15:53:23.356522Z",
+     "iopub.status.idle": "2023-06-24T15:53:24.318170Z",
+     "shell.execute_reply": "2023-06-24T15:53:24.317451Z"
     }
    },
    "outputs": [
@@ -279,10 +272,10 @@
    "id": "95b1e0a4-d9f5-40f2-830f-69c8c9f21172",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:39.380493Z",
-     "iopub.status.busy": "2023-06-17T04:35:39.380228Z",
-     "iopub.status.idle": "2023-06-17T04:35:39.605515Z",
-     "shell.execute_reply": "2023-06-17T04:35:39.604608Z"
+     "iopub.execute_input": "2023-06-24T15:53:24.322941Z",
+     "iopub.status.busy": "2023-06-24T15:53:24.322705Z",
+     "iopub.status.idle": "2023-06-24T15:53:24.625020Z",
+     "shell.execute_reply": "2023-06-24T15:53:24.624202Z"
     },
     "tags": []
    },
@@ -349,17 +342,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "69e378d4-4d30-47cf-84c8-8fe56afe517e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:39.610081Z",
-     "iopub.status.busy": "2023-06-17T04:35:39.609821Z",
-     "iopub.status.idle": "2023-06-17T04:35:51.865301Z",
-     "shell.execute_reply": "2023-06-17T04:35:51.863821Z"
+     "iopub.execute_input": "2023-06-24T15:53:24.629561Z",
+     "iopub.status.busy": "2023-06-24T15:53:24.629326Z",
+     "iopub.status.idle": "2023-06-24T15:53:29.903979Z",
+     "shell.execute_reply": "2023-06-24T15:53:29.903087Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bddtest_1.id</th>\n",
+       "      <th>yolo.labels</th>\n",
+       "      <th>yolo.bboxes</th>\n",
+       "      <th>yolo.scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[car, car, stop sign, car, person, car, stop s...</td>\n",
+       "      <td>[[488.86077880859375, 332.8629150390625, 716.9...</td>\n",
+       "      <td>[0.93, 0.81, 0.78, 0.65, 0.56, 0.52, 0.49, 0.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[car, car, stop sign, car, stop sign, car, per...</td>\n",
+       "      <td>[[485.6525573730469, 332.111083984375, 716.249...</td>\n",
+       "      <td>[0.92, 0.77, 0.72, 0.67, 0.62, 0.59, 0.46, 0.4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[car, stop sign, car, car, car, person, car, c...</td>\n",
+       "      <td>[[481.7060546875, 331.65838623046875, 716.8156...</td>\n",
+       "      <td>[0.94, 0.77, 0.77, 0.77, 0.6, 0.55, 0.42, 0.39...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bddtest_1.id                                        yolo.labels  \\\n",
+       "0             0  [car, car, stop sign, car, person, car, stop s...   \n",
+       "1             1  [car, car, stop sign, car, stop sign, car, per...   \n",
+       "2             2  [car, stop sign, car, car, car, person, car, c...   \n",
+       "\n",
+       "                                         yolo.bboxes  \\\n",
+       "0  [[488.86077880859375, 332.8629150390625, 716.9...   \n",
+       "1  [[485.6525573730469, 332.111083984375, 716.249...   \n",
+       "2  [[481.7060546875, 331.65838623046875, 716.8156...   \n",
+       "\n",
+       "                                         yolo.scores  \n",
+       "0  [0.93, 0.81, 0.78, 0.65, 0.56, 0.52, 0.49, 0.4...  \n",
+       "1  [0.92, 0.77, 0.72, 0.67, 0.62, 0.59, 0.46, 0.4...  \n",
+       "2  [0.94, 0.77, 0.77, 0.77, 0.6, 0.55, 0.42, 0.39...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = cursor.table(\"bddtest_1\")\n",
     "query = query.filter(\"id < 3\")\n",
@@ -379,14 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2990038a-00ec-4d36-aae2-82a789f2389a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:51.870944Z",
-     "iopub.status.busy": "2023-06-17T04:35:51.870627Z",
-     "iopub.status.idle": "2023-06-17T04:35:52.310862Z",
-     "shell.execute_reply": "2023-06-17T04:35:52.309938Z"
+     "iopub.execute_input": "2023-06-24T15:53:29.908777Z",
+     "iopub.status.busy": "2023-06-24T15:53:29.908424Z",
+     "iopub.status.idle": "2023-06-24T15:53:30.391304Z",
+     "shell.execute_reply": "2023-06-24T15:53:30.390528Z"
     }
    },
    "outputs": [
